film related code and fixes
